[FIX] Not letting the help section go too low, because in certain contexts, the right-left scroll is not visible.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@17875 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/strasa.css
+++ b/styles/strasa.css
@@ -1015,7 +1015,7 @@ div.help_section_select {
 div.help_sections {
 	padding:  2px;
 	background: white;
-	max-height : 500px;
+	max-height : 95%;
 	overflow: auto}
 
 div.help_section {
